Upgraded sample code to .Net Core 2.1

--- a/Solved-Versions/FSharp-Version/Do-you/Really-want-to/Cheat/TurtleRunner.fsproj
+++ b/Solved-Versions/FSharp-Version/Do-you/Really-want-to/Cheat/TurtleRunner.fsproj
@@ -1,17 +1,16 @@
 <Project Sdk="FSharp.NET.Sdk;Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <DebugType>portable</DebugType>
     <AssemblyName>TurtleRunner</AssemblyName>
     <OutputType>Library</OutputType>
     <PackageId>TurtleRunner</PackageId>
-    <RuntimeFrameworkVersion>1.0.4</RuntimeFrameworkVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FSharp.NET.Sdk" Version="1.0.*" PrivateAssets="All" />
-    <PackageReference Include="FSharp.Core" Version="4.1.*" />
+    <PackageReference Include="FSharp.NET.Sdk" Version="1.0.5" PrivateAssets="All" />
+    <PackageReference Include="FSharp.Core" Version="4.5.2" />
   </ItemGroup>
 
   <ItemGroup>
