Upgraded projects to .Net Core 3

--- a/Solved-Versions/FSharp-Version/Do-you/Really-want-to/Cheat/TurtleRunner.fsproj
+++ b/Solved-Versions/FSharp-Version/Do-you/Really-want-to/Cheat/TurtleRunner.fsproj
@@ -1,14 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="FSharp.Core" Version="4.5.2" />
-  </ItemGroup>
-
   <ItemGroup>
     <Compile Include="TurtleRunner.fs" />
   </ItemGroup>
+  
 </Project>
